# Naive-Path-tracer

./: .gitignore  CMakeLists.txt  CMakePresets2.json  readme.html  readme.md  report.md  run.sh  run_vs.sh
apps/: CMakeLists.txt
apps/yraytrace/: CMakeLists.txt  yraytrace.cpp
libs/yocto/: yocto_bvh.cpp  yocto_bvh.h  yocto_geometry.h
libs/yocto_raytrace/: yocto_raytrace.cpp  yocto_raytrace.h
report/: report.html  report.md
scripts/: run-highres.sh  run.sh  run_mac.sh
tests/01_cornellbox/: cornellbox.json
tests/02_matte/: matte.json
tests/03_texture/: texture.json
tests/04_envlight/: envlight.json
tests/05_arealight/: arealight.json
tests/06_metal/: metal.json
tests/07_plastic/: plastic.json
tests/08_glass/: glass.json
tests/09_opacity/: opacity.json
tests/10_hair/: hair.json
tests/11_bathroom1/: bathroom1.json
